--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#drum-machine {
+    margin: auto;
+    height: 20rem;
+    width: 40rem;
+    margin-top: 15rem;
+    background-color: lightgrey;
+    display: flex;
+    border-style: solid;
+    border-color: black;
+    border-width: thick;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    background-color: grey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#display {
+    position: absolute;
+    top: 22.5rem;
+    left: 55rem;
+    width: 11em;
+    height: 2.8em;
+    background: grey;
+    text-align: center;
+    padding-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.text {
+    font-weight: 1000;
+    text-align: center;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons-container {
+    width: 20em;
+    height: 20em;
+    margin-left: 40px;
+    margin-top: 3px;
+}
+
+.buttons-div {
+    display: grid;
+    grid-template-columns: 90px 96px 90px;
+    grid-row-gap: 5px;
+    grid-column-gap: 10px;
+    justify-items: center;
+    margin-top: 30px;
+}
+
+.drum-pad {
+    width: 6rem;
+    height: 5rem;
+    border-radius: 6px;
+    background-color: grey;
+    font-weight: 1000;
+    font-size: 1em;
+}
+
+.power {
+    position: absolute;
+    top: 18rem;
+    left: 59rem;
+    display: grid;
+    text-align: center;
+}
+
+input[type="checkbox"] {
+    position: relative;
+    width: 70px;
+    height: 30px;
+    -webkit-appearance: none;
+    background: #c6c6c6;
+    outline: none;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, .2);
+    transition: 0.5s;
+}
+
+input:checked[type="checkbox"] {
+    background: #03a9f4;
+}
+
+input[type="checkbox"]:before {
+    content: "";
+    position: absolute;
+    width: 27px;
+    height: 25px;
+    top: 2.3px;
+    left: 2px;
+    background: #fff;
+    transform: scale(1.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    transition: .5s;
+}
+
+input:checked[type="checkbox"]:before {
+    left: 40px;
+}
+
+.bank {
+    position: absolute;
+    top: 28rem;
+    left: 59rem;
+    display: grid;
+    text-align: center;
+}
+
+label {
+    font-weight: 1000;
+    margin-bottom: 3px;
+}
+
+.volumebarcontainer {
+    position: absolute;
+    top: 26.5rem;
+    left: 53rem;
+}
+
+.volumebar {
+    width: 15rem;
+    background-color: black;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    cursor: pointer;
 }
